--- a/content/publications/hautz-diagnostic-2015/cite.bib
+++ b/content/publications/hautz-diagnostic-2015/cite.bib
@@ -1,16 +1,17 @@
+
 @article{hautz_diagnostic_2015,
- author = {Hautz, Wolf E. and Kämmer, Juliane E. and Schauber, Stefan K. and Spies, Claudia D. and Gaissmaier, Wolfgang},
- doi = {10.1001/jama.2014.15770},
- file = {Eingereichte Version:files/295/Hautz et al. - 2015 - Diagnostic Performance by Medical Students Working.pdf:application/pdf},
- issn = {0098-7484},
- journal = {JAMA},
- language = {en},
- month = {January},
- number = {3},
- pages = {303},
- title = {Diagnostic Performance by Medical Students Working Individually or in Teams},
- url = {http://jama.jamanetwork.com/article.aspx?doi=10.1001/jama.2014.15770},
- urldate = {2025-04-09},
- volume = {313},
- year = {2015}
+	title = {Diagnostic {Performance} by {Medical} {Students} {Working} {Individually} or in {Teams}},
+	volume = {313},
+	issn = {0098-7484},
+	url = {http://jama.jamanetwork.com/article.aspx?doi=10.1001/jama.2014.15770},
+	doi = {10.1001/jama.2014.15770},
+	language = {en},
+	number = {3},
+	urldate = {2025-04-09},
+	journal = {JAMA},
+	author = {Hautz, Wolf E. and Kämmer, Juliane E. and Schauber, Stefan K. and Spies, Claudia D. and Gaissmaier, Wolfgang},
+	month = jan,
+	year = {2015},
+	pages = {303},
+	file = {Eingereichte Version:C\:\\Users\\halbr\\Zotero\\storage\\XAJBHEJS\\Hautz et al. - 2015 - Diagnostic Performance by Medical Students Working.pdf:application/pdf},
 }
