--- a/content/publications/kammer_collaboration_2024/cite.bib
+++ b/content/publications/kammer_collaboration_2024/cite.bib
@@ -1,5 +1,5 @@
 @article{kammer_collaboration_2024,
-  title = {Collaboration during the diagnostic decision‐making process: When does it help?},
+  title = {Collaboration during the diagnostic decision-making process: When does it help?},
   author = {Kämmer, Juliane E. and Ernst, Karin and Grab, Kim and Schauber, Stefan K. and Hautz, Stefanie C. and Penders, Dorothea and Hautz, Wolf E.},
   journal = {Journal of Behavioral Decision Making},
   volume = {37},
