--- a/content/publication/freytag-rating-2019/cite.bib
+++ b/content/publication/freytag-rating-2019/cite.bib
@@ -1,15 +1,13 @@
 @article{freytag_rating_2019,
- author = {Freytag, Julia and Stroben, Fabian and Hautz, Wolf E. and Schauber, Stefan K. and Kämmer, Juliane E.},
- doi = {10.1186/s13049-019-0591-9},
- issn = {1757-7241},
- journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
- language = {en},
- month = {December},
- number = {1},
- pages = {12},
- title = {Rating the quality of teamwork—a comparison of novice and expert ratings using the Team Emergency Assessment Measure (TEAM) in simulated emergencies},
- url = {https://sjtrem.biomedcentral.com/articles/10.1186/s13049-019-0591-9},
- urldate = {2025-04-09},
- volume = {27},
- year = {2019}
+  author  = {Freytag, Julia and Stroben, Fabian and Hautz, Wolf E. and Schauber, Stefan K. and Kämmer, Juliane E.},
+  title   = {Rating the Quality of Teamwork—A Comparison of Novice and Expert Ratings Using the Team Emergency Assessment Measure (TEAM) in Simulated Emergencies},
+  journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
+  volume  = {27},
+  number  = {1},
+  pages   = {12},
+  year    = {2019},
+  month   = {December},
+  doi     = {10.1186/s13049-019-0591-9},
+  url     = {https://sjtrem.biomedcentral.com/articles/10.1186/s13049-019-0591-9}
 }
+
