--- a/content/publication/hautz-diagnostic-2015/cite.bib
+++ b/content/publication/hautz-diagnostic-2015/cite.bib
@@ -1,15 +1,13 @@
 @article{hautz_diagnostic_2015,
- author = {Hautz, Wolf E. and Kämmer, Juliane E. and Schauber, Stefan K. and Spies, Claudia D. and Gaissmaier, Wolfgang},
- doi = {10.1001/jama.2014.15770},
- issn = {0098-7484},
- journal = {JAMA},
- language = {en},
- month = {January},
- number = {3},
- pages = {303},
- title = {Diagnostic Performance by Medical Students Working Individually or in Teams},
- url = {http://jama.jamanetwork.com/article.aspx?doi=10.1001/jama.2014.15770},
- urldate = {2025-04-09},
- volume = {313},
- year = {2015}
+  author  = {Hautz, Wolf E. and Kämmer, Juliane E. and Schauber, Stefan K. and Spies, Claudia D. and Gaissmaier, Wolfgang},
+  title   = {Diagnostic Performance by Medical Students Working Individually or in Teams},
+  journal = {JAMA},
+  volume  = {313},
+  number  = {3},
+  pages   = {303},
+  year    = {2015},
+  month   = {January},
+  doi     = {10.1001/jama.2014.15770},
+  url     = {http://jama.jamanetwork.com/article.aspx?doi=10.1001/jama.2014.15770}
 }
+
