--- a/content/publication/hautz-diagnostic-2019/cite.bib
+++ b/content/publication/hautz-diagnostic-2019/cite.bib
@@ -1,16 +1,13 @@
 @article{hautz_diagnostic_2019,
- author = {Hautz, Wolf E. and Kämmer, Juliane E. and Hautz, Stefanie C. and Sauter, Thomas C. and Zwaan, Laura and Exadaktylos, Aristomenis K. and Birrenbach, Tanja and Maier, Volker and Müller, Martin and Schauber, Stefan K.},
- doi = {10.1186/s13049-019-0629-z},
- file = {Volltext:files/64/Hautz et al. - 2019 - Diagnostic error increases mortality and length of.pdf:application/pdf},
- issn = {1757-7241},
- journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
- language = {en},
- month = {December},
- number = {1},
- pages = {54},
- title = {Diagnostic error increases mortality and length of hospital stay in patients presenting through the emergency room},
- url = {https://sjtrem.biomedcentral.com/articles/10.1186/s13049-019-0629-z},
- urldate = {2025-04-09},
- volume = {27},
- year = {2019}
+  author  = {Hautz, Wolf E. and Kämmer, Juliane E. and Hautz, Stefanie C. and Sauter, Thomas C. and Zwaan, Laura and Exadaktylos, Aristomenis K. and Birrenbach, Tanja and Maier, Volker and Müller, Martin and Schauber, Stefan K.},
+  title   = {Diagnostic Error Increases Mortality and Length of Hospital Stay in Patients Presenting Through the Emergency Room},
+  journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
+  volume  = {27},
+  number  = {1},
+  pages   = {54},
+  year    = {2019},
+  month   = {December},
+  doi     = {10.1186/s13049-019-0629-z},
+  url     = {https://sjtrem.biomedcentral.com/articles/10.1186/s13049-019-0629-z}
 }
+
