--- a/content/publication/kammer-collaboration-2024/cite.bib
+++ b/content/publication/kammer-collaboration-2024/cite.bib
@@ -1,16 +1,12 @@
 @article{kammer_collaboration_2024,
- author = {Kämmer, Juliane E. and Ernst, Karin and Grab, Kim and Schauber, Stefan K. and Hautz, Stefanie C. and Penders, Dorothea and Hautz, Wolf E.},
- doi = {10.1002/bdm.2357},
- issn = {0894-3257, 1099-0771},
- journal = {Journal of Behavioral Decision Making},
- language = {en},
- month = {January},
- number = {1},
- pages = {e2357},
- shorttitle = {Collaboration during the diagnostic decision‐making process},
- title = {Collaboration during the diagnostic decision‐making process: When does it help?},
- url = {https://onlinelibrary.wiley.com/doi/10.1002/bdm.2357},
- urldate = {2025-04-09},
- volume = {37},
- year = {2024}
+  author  = {Kämmer, Juliane E. and Ernst, Karin and Grab, Kim and Schauber, Stefan K. and Hautz, Stefanie C. and Penders, Dorothea and Hautz, Wolf E.},
+  title   = {Collaboration during the Diagnostic Decision-Making Process: When Does It Help?},
+  journal = {Journal of Behavioral Decision Making},
+  volume  = {37},
+  number  = {1},
+  pages   = {e2357},
+  year    = {2024},
+  month   = {January},
+  doi     = {10.1002/bdm.2357},
+  url     = {https://onlinelibrary.wiley.com/doi/10.1002/bdm.2357}
 }
