--- a/publications.bib
+++ b/publications.bib
@@ -15,78 +15,39 @@
 	file = {Volltext:files/62/Seelandt et al. - 2023 - How to enrich team research in healthcare by consi.pdf:application/pdf},
 }
 
-@article{kammer_collaboration_2024,
-	title = {Collaboration during the diagnostic decision‐making process: {When} does it help?},
-	volume = {37},
-	issn = {0894-3257, 1099-0771},
-	shorttitle = {Collaboration during the diagnostic decision‐making process},
-	url = {https://onlinelibrary.wiley.com/doi/10.1002/bdm.2357},
-	doi = {10.1002/bdm.2357},
+@article{wespi_physiological_2025,
+	title = {Physiological team dynamics explored: physiological synchrony in medical simulation training},
+	volume = {10},
+	issn = {2059-0628},
+	shorttitle = {Physiological team dynamics explored},
+	url = {https://advancesinsimulation.biomedcentral.com/articles/10.1186/s41077-025-00335-5},
+	doi = {10.1186/s41077-025-00335-5},
 	abstract = {Abstract
             
-              When making complex decisions, such as a medical diagnosis, decision makers typically gather, analyze, and synthesize (integrate) information. In a previous study, we showed that delegating such complex decisions to collaborating pairs increases decision quality substantially compared to that of individuals, without requiring different information gathering. Given the higher costs associated with teamwork, however, it is of great practical interest to understand when in the process the performance benefits of teams may arise, so that particular subtasks can be delegated to teams when most appropriate. We thus conducted an experimental study in which fourth‐year medical students (
-              n
-               = 109) worked either in pairs or alone on two separate subtasks of the diagnostic process: (1) analyzing diagnostic test results (e.g., X‐rays) and (2) integrating previously interpreted test results into diagnoses. Linear mixed‐effects models revealed a small benefit of collaborating pairs over individuals in both subtasks. We conclude that collaborating with a peer may pay off both when analyzing information
-              and
-              when integrating it into a diagnosis as it provides the opportunity to correct each other's errors and to make use of a greater knowledge base. These findings encourage the strategic use of collaboration with a colleague when making complex decisions. Further research into the underlying processes is needed.},
+              Introduction
+              For researchers and medical simulation trainers, measuring team dynamics is vital for providing targeted feedback that can lead to improved patient outcomes. It is also valuable for research, such as investigating which dynamics benefit team performance. Traditional assessment methods, such as questionnaires and observations, are often subjective and static, lacking the ability to capture team dynamics. To address these shortcomings, this study explores the use of physiological synchrony (PS) measured through electrocardiogram (ECG) data to evaluate team dynamics automated and in high-resolution.
+            
+            
+              Methods
+              A multicentre observational field study was conducted involving 214 medical first responders during mixed reality (MR) mass casualty training sessions. Participants were equipped with electrocardiogram (ECG) sensors and MR gear. The study measured dyadic PS using heart rate (HR), root mean square of successive differences (RMSSD), and standard deviation of NN intervals (SDNN). Data were collected at high frequency and analysed using dynamic time warping (dtw) to assess fluctuations in PS.
+            
+            
+              Results
+              Findings indicate that PS varies significantly by task nature, with higher synchrony during cooperative tasks compared to baseline. Different ECG metrics offered unique insights into team dynamics. Proximity and scenario conditions influenced PS, with closer teamwork leading to higher PS. Smaller sampling intervals (e.g. 5 s) provided a detailed view of PS fluctuations over time.
+            
+            
+              Discussion
+              The results demonstrate the potential of PS as an indicator of team performance and cohesion. High-resolution monitoring provides detailed insights into team dynamics, offering high-resolution feedback that traditional methods cannot provide. The integration of physiological measures into training programmes can enhance team performance by providing objective, high-resolution data.
+            
+            
+              Conclusion
+              This study shows that PS, measured by ECG data, is sensitive to medical team activities, offering insights into team dynamics. Different ECG metrics highlight various aspects of team performance, and high-resolution monitoring captures detailed dynamics. Further research is needed to validate these findings across diverse scenarios. This approach could improve training methodologies, resulting in better-prepared medical teams and improved patient care outcomes.},
 	language = {en},
 	number = {1},
-	urldate = {2025-04-09},
-	journal = {Journal of Behavioral Decision Making},
-	author = {Kämmer, Juliane E. and Ernst, Karin and Grab, Kim and Schauber, Stefan K. and Hautz, Stefanie C. and Penders, Dorothea and Hautz, Wolf E.},
-	month = jan,
-	year = {2024},
-	pages = {e2357},
-	file = {Volltext:files/63/Kämmer et al. - 2024 - Collaboration during the diagnostic decision‐makin.pdf:application/pdf},
-}
-
-@article{hautz_diagnostic_2019,
-	title = {Diagnostic error increases mortality and length of hospital stay in patients presenting through the emergency room},
-	volume = {27},
-	issn = {1757-7241},
-	url = {https://sjtrem.biomedcentral.com/articles/10.1186/s13049-019-0629-z},
-	doi = {10.1186/s13049-019-0629-z},
-	language = {en},
-	number = {1},
-	urldate = {2025-04-09},
-	journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
-	author = {Hautz, Wolf E. and Kämmer, Juliane E. and Hautz, Stefanie C. and Sauter, Thomas C. and Zwaan, Laura and Exadaktylos, Aristomenis K. and Birrenbach, Tanja and Maier, Volker and Müller, Martin and Schauber, Stefan K.},
-	month = dec,
-	year = {2019},
-	pages = {54},
-	file = {Volltext:files/64/Hautz et al. - 2019 - Diagnostic error increases mortality and length of.pdf:application/pdf},
-}
-
-@article{freytag_rating_2019,
-	title = {Rating the quality of teamwork—a comparison of novice and expert ratings using the {Team} {Emergency} {Assessment} {Measure} ({TEAM}) in simulated emergencies},
-	volume = {27},
-	issn = {1757-7241},
-	url = {https://sjtrem.biomedcentral.com/articles/10.1186/s13049-019-0591-9},
-	doi = {10.1186/s13049-019-0591-9},
-	language = {en},
-	number = {1},
-	urldate = {2025-04-09},
-	journal = {Scandinavian Journal of Trauma, Resuscitation and Emergency Medicine},
-	author = {Freytag, Julia and Stroben, Fabian and Hautz, Wolf E. and Schauber, Stefan K. and Kämmer, Juliane E.},
-	month = dec,
-	year = {2019},
-	pages = {12},
-	file = {Volltext:files/66/Freytag et al. - 2019 - Rating the quality of teamwork—a comparison of nov.pdf:application/pdf},
-}
-
-@article{hautz_diagnostic_2015,
-	title = {Diagnostic {Performance} by {Medical} {Students} {Working} {Individually} or in {Teams}},
-	volume = {313},
-	issn = {0098-7484},
-	url = {http://jama.jamanetwork.com/article.aspx?doi=10.1001/jama.2014.15770},
-	doi = {10.1001/jama.2014.15770},
-	language = {en},
-	number = {3},
-	urldate = {2025-04-09},
-	journal = {JAMA},
-	author = {Hautz, Wolf E. and Kämmer, Juliane E. and Schauber, Stefan K. and Spies, Claudia D. and Gaissmaier, Wolfgang},
-	month = jan,
-	year = {2015},
-	pages = {303},
-	file = {Eingereichte Version:files/894/Hautz et al. - 2015 - Diagnostic Performance by Medical Students Working.pdf:application/pdf},
+	urldate = {2025-06-05},
+	journal = {Advances in Simulation},
+	author = {Wespi, Rafael and Neher, Andrea N. and Birrenbach, Tanja and Schauber, Stefan K. and Frenkel, Marie Ottilie and Schrom-Feiertag, Helmut and Sauter, Thomas C. and Kämmer, Juliane E.},
+	month = mar,
+	year = {2025},
+	pages = {5},
 }
