--- a/content/publication/wespi-physiological-2025/cite.bib
+++ b/content/publication/wespi-physiological-2025/cite.bib
@@ -1,36 +1,12 @@
 @article{wespi_physiological_2025,
- abstract = {Abstract
-
-Introduction
-For researchers and medical simulation trainers, measuring team dynamics is vital for providing targeted feedback that can lead to improved patient outcomes. It is also valuable for research, such as investigating which dynamics benefit team performance. Traditional assessment methods, such as questionnaires and observations, are often subjective and static, lacking the ability to capture team dynamics. To address these shortcomings, this study explores the use of physiological synchrony (PS) measured through electrocardiogram (ECG) data to evaluate team dynamics automated and in high-resolution.
-
-
-Methods
-A multicentre observational field study was conducted involving 214 medical first responders during mixed reality (MR) mass casualty training sessions. Participants were equipped with electrocardiogram (ECG) sensors and MR gear. The study measured dyadic PS using heart rate (HR), root mean square of successive differences (RMSSD), and standard deviation of NN intervals (SDNN). Data were collected at high frequency and analysed using dynamic time warping (dtw) to assess fluctuations in PS.
-
-
-Results
-Findings indicate that PS varies significantly by task nature, with higher synchrony during cooperative tasks compared to baseline. Different ECG metrics offered unique insights into team dynamics. Proximity and scenario conditions influenced PS, with closer teamwork leading to higher PS. Smaller sampling intervals (e.g. 5 s) provided a detailed view of PS fluctuations over time.
-
-
-Discussion
-The results demonstrate the potential of PS as an indicator of team performance and cohesion. High-resolution monitoring provides detailed insights into team dynamics, offering high-resolution feedback that traditional methods cannot provide. The integration of physiological measures into training programmes can enhance team performance by providing objective, high-resolution data.
-
-
-Conclusion
-This study shows that PS, measured by ECG data, is sensitive to medical team activities, offering insights into team dynamics. Different ECG metrics highlight various aspects of team performance, and high-resolution monitoring captures detailed dynamics. Further research is needed to validate these findings across diverse scenarios. This approach could improve training methodologies, resulting in better-prepared medical teams and improved patient care outcomes.},
- author = {Wespi, Rafael and Neher, Andrea N. and Birrenbach, Tanja and Schauber, Stefan K. and Frenkel, Marie Ottilie and Schrom-Feiertag, Helmut and Sauter, Thomas C. and Kämmer, Juliane E.},
- doi = {10.1186/s41077-025-00335-5},
- issn = {2059-0628},
- journal = {Advances in Simulation},
- language = {en},
- month = {March},
- number = {1},
- pages = {5},
- shorttitle = {Physiological team dynamics explored},
- title = {Physiological team dynamics explored: physiological synchrony in medical simulation training},
- url = {https://advancesinsimulation.biomedcentral.com/articles/10.1186/s41077-025-00335-5},
- urldate = {2025-06-05},
- volume = {10},
- year = {2025}
+  author = {Wespi, R. and Neher, A. N. and Birrenbach, T. and Schauber, S. K. and Frenkel, M. O. and Schrom-Feiertag, H. and Sauter, T. C. and Kämmer, J. E.},
+  title = {Physiological Team Dynamics Explored: Physiological Synchrony in Medical Simulation Training},
+  journal = {Advances in Simulation},
+  volume = {10},
+  number = {1},
+  pages = {5},
+  year = {2025},
+  doi = {10.1186/s41077-025-00335-5},
+  url = {https://advancesinsimulation.biomedcentral.com/articles/10.1186/s41077-025-00335-5}
 }
+
