--- a/publications.bib
+++ b/publications.bib
@@ -1,53 +1,28 @@
 
-@article{seelandt_how_2023,
-	title = {How to enrich team research in healthcare by considering five theoretical perspectives},
+@article{kammer_effects_2024,
+	title = {Effects of interacting with a large language model compared with a human coach on the clinical diagnostic process and outcomes among fourth-year medical students: study protocol for a prospective, randomised experiment using patient vignettes},
 	volume = {14},
-	issn = {1664-1078},
-	url = {https://www.frontiersin.org/articles/10.3389/fpsyg.2023.1232331/full},
-	doi = {10.3389/fpsyg.2023.1232331},
-	abstract = {The aim of this paper is to inspire team research to apply diverse and unconventional perspectives to study team dynamics and performance in healthcare settings. To illustrate that using multiple perspectives can yield valuable insights, we examine a segment of a team interaction during a heart-surgery, using five distinct interdisciplinary perspectives known from small group research: the psychodynamic, functional, conflict-power-status, temporal, and social identity perspectives. We briefly describe each theoretical perspective, discuss its application to study healthcare teams, and present possible research questions for the segment at hand using the respective perspective. We also highlight the benefits and challenges associated with employing these diverse approaches and explore how they can be integrated to analyze team processes in health care. Finally, we offer our own insights and opinions on the integration of these approaches, as well as the types of data required to conduct such analyses. We also point to further research avenues and highlight the benefits associated with employing these diverse approaches. Finally, we offer our own insights and opinions on the integration of these approaches, as well as the types of data required to conduct such analyses.},
-	urldate = {2025-04-09},
-	journal = {Frontiers in Psychology},
-	author = {Seelandt, Julia C. and Boos, Margarete and Kolbe, Michaela and Kämmer, Juliane E.},
-	month = aug,
-	year = {2023},
-	pages = {1232331},
-	file = {Volltext:files/62/Seelandt et al. - 2023 - How to enrich team research in healthcare by consi.pdf:application/pdf},
-}
-
-@article{wespi_physiological_2025,
-	title = {Physiological team dynamics explored: physiological synchrony in medical simulation training},
-	volume = {10},
-	issn = {2059-0628},
-	shorttitle = {Physiological team dynamics explored},
-	url = {https://advancesinsimulation.biomedcentral.com/articles/10.1186/s41077-025-00335-5},
-	doi = {10.1186/s41077-025-00335-5},
-	abstract = {Abstract
-            
-              Introduction
-              For researchers and medical simulation trainers, measuring team dynamics is vital for providing targeted feedback that can lead to improved patient outcomes. It is also valuable for research, such as investigating which dynamics benefit team performance. Traditional assessment methods, such as questionnaires and observations, are often subjective and static, lacking the ability to capture team dynamics. To address these shortcomings, this study explores the use of physiological synchrony (PS) measured through electrocardiogram (ECG) data to evaluate team dynamics automated and in high-resolution.
+	issn = {2044-6055, 2044-6055},
+	shorttitle = {Effects of interacting with a large language model compared with a human coach on the clinical diagnostic process and outcomes among fourth-year medical students},
+	url = {https://bmjopen.bmj.com/lookup/doi/10.1136/bmjopen-2024-087469},
+	doi = {10.1136/bmjopen-2024-087469},
+	abstract = {Introduction
+              Versatile large language models (LLMs) have the potential to augment diagnostic decision-making by assisting diagnosticians, thanks to their ability to engage in open-ended, natural conversations and their comprehensive knowledge access. Yet the novelty of LLMs in diagnostic decision-making introduces uncertainties regarding their impact. Clinicians unfamiliar with the use of LLMs in their professional context may rely on general attitudes towards LLMs more broadly, potentially hindering thoughtful use and critical evaluation of their input, leading to either over-reliance and lack of critical thinking or an unwillingness to use LLMs as diagnostic aids. To address these concerns, this study examines the influence on the diagnostic process and outcomes of interacting with an LLM compared with a human coach, and of prior training vs no training for interacting with either of these ‘coaches’. Our findings aim to illuminate the potential benefits and risks of employing artificial intelligence (AI) in diagnostic decision-making.
             
             
-              Methods
-              A multicentre observational field study was conducted involving 214 medical first responders during mixed reality (MR) mass casualty training sessions. Participants were equipped with electrocardiogram (ECG) sensors and MR gear. The study measured dyadic PS using heart rate (HR), root mean square of successive differences (RMSSD), and standard deviation of NN intervals (SDNN). Data were collected at high frequency and analysed using dynamic time warping (dtw) to assess fluctuations in PS.
+              Methods and analysis
+              We are conducting a prospective, randomised experiment with N=158 fourth-year medical students from Charité Medical School, Berlin, Germany. Participants are asked to diagnose patient vignettes after being assigned to either a human coach or ChatGPT and after either training or no training (both between-subject factors). We are specifically collecting data on the effects of using either of these ‘coaches’ and of additional training on information search, number of hypotheses entertained, diagnostic accuracy and confidence. Statistical methods will include linear mixed effects models. Exploratory analyses of the interaction patterns and attitudes towards AI will also generate more generalisable knowledge about the role of AI in medicine.
             
             
-              Results
-              Findings indicate that PS varies significantly by task nature, with higher synchrony during cooperative tasks compared to baseline. Different ECG metrics offered unique insights into team dynamics. Proximity and scenario conditions influenced PS, with closer teamwork leading to higher PS. Smaller sampling intervals (e.g. 5 s) provided a detailed view of PS fluctuations over time.
-            
-            
-              Discussion
-              The results demonstrate the potential of PS as an indicator of team performance and cohesion. High-resolution monitoring provides detailed insights into team dynamics, offering high-resolution feedback that traditional methods cannot provide. The integration of physiological measures into training programmes can enhance team performance by providing objective, high-resolution data.
-            
-            
-              Conclusion
-              This study shows that PS, measured by ECG data, is sensitive to medical team activities, offering insights into team dynamics. Different ECG metrics highlight various aspects of team performance, and high-resolution monitoring captures detailed dynamics. Further research is needed to validate these findings across diverse scenarios. This approach could improve training methodologies, resulting in better-prepared medical teams and improved patient care outcomes.},
+              Ethics and dissemination
+              The Bern Cantonal Ethics Committee considered the study exempt from full ethical review (BASEC No: Req-2023-01396). All methods will be conducted in accordance with relevant guidelines and regulations. Participation is voluntary and informed consent will be obtained. Results will be published in peer-reviewed scientific medical journals. Authorship will be determined according to the International Committee of Medical Journal Editors guidelines.},
 	language = {en},
-	number = {1},
+	number = {7},
 	urldate = {2025-06-05},
-	journal = {Advances in Simulation},
-	author = {Wespi, Rafael and Neher, Andrea N. and Birrenbach, Tanja and Schauber, Stefan K. and Frenkel, Marie Ottilie and Schrom-Feiertag, Helmut and Sauter, Thomas C. and Kämmer, Juliane E.},
-	month = mar,
-	year = {2025},
-	pages = {5},
+	journal = {BMJ Open},
+	author = {Kämmer, Juliane E and Hautz, Wolf E and Krummrey, Gert and Sauter, Thomas C and Penders, Dorothea and Birrenbach, Tanja and Bienefeld, Nadine},
+	month = jul,
+	year = {2024},
+	pages = {e087469},
+	file = {Full Text PDF:files/901/Kämmer et al. - 2024 - Effects of interacting with a large language model compared with a human coach on the clinical diagn.pdf:application/pdf},
 }
